Design made more responsive.

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="chat-container">
         <header class="chat-header">
-            <h1>CHAT</h1>
+            <h1>kood/Chat</h1>
         </header>
         <main class="chat-main">
             <div class="chat-messages"></div>
